--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Montserrat:wght@300;400;600;800&display=swap" rel="stylesheet">
     <style>
+      html{
+        scroll-behavior: smooth;
+      }
       body {
         background-color: #0a0a0a;
         color: #f5f5f5;
